Setting up data model

--- a/OrderOfBattle/Order Of Battle.csproj
+++ b/OrderOfBattle/Order Of Battle.csproj
@@ -4,4 +4,7 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>OrderOfBattle</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
 </Project>
